--- a/public/css/app.css
+++ b/public/css/app.css
@@ -45,7 +45,7 @@
 }
 
 html {
-  font-family: sans-serif,"Vazir";
+  font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -66,7 +66,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Vazir","Nunito", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
